k8s/analytics-consumer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-consumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: analytics-consumer
  template:
    metadata:
      labels:
        app: analytics-consumer
    spec:
      nodeSelector:
        service: "true"
      imagePullSecrets:
        - name: docker-secrets
      containers:
        - name: analytics-consumer
          image: cooperw22/analytics-consumer:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-consumer
spec:
  selector:
    app: analytics-consumer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
