k8s/ingress.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: urls-shortener-proxy
  namespace: default
spec:
  virtualhost:
    fqdn: urls.ac
  routes:
    - conditions:
        - prefix: "/analytics"
      services:
        - name: analytics-service
          port: 80
    - conditions:
        - prefix: "/urls"
      services:
        - name: urls-service
          port: 80
    - conditions:
        - prefix: "/"
      services:
        - name: urls-service
          port: 80
        - name: analytics-service
          port: 80
          mirror: true
